--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mohmed Mahmoud Fouad",
+  "name": "mohmed_mahmoud_fouad",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
